# ventty

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.ko.md  README.md
.github/workflows/: build.yml
cmake/: venttyConfig.cmake.in
docker/: Dockerfile
docs/: LICENSES.md  project-structure.md  quick-start.md
docs/plans/: gfx-font-atlas-migration.md  mdir-ventty-gfx-migration.md  remove-screen-use-window.md
examples/: CMakeLists.txt  demo_ascii_art.cpp  demo_color.cpp  demo_terminal.cpp  demo_widget_listview.cpp  demo_widget_menu.cpp  demo_window.cpp
mdir/: CHANGELOG.md  CMakeLists.txt  README.md
mdir/dep/: CMakeLists.txt
mdir/docs/mdir/: README.md  ui-analysis.md
mdir/docs/plan/: config.md  roadmap.md  v0.1-spec.md  v0.2-spec.md  v0.3-spec.md
mdir/src/: CMakeLists.txt  main.cpp
mdir/src/app/: Application.cpp  Application.h
mdir/src/fs/: FileInfo.cpp  FileInfo.h  FileSystem.cpp  FileSystem.h
mdir/src/view/: FilePanel.cpp  FilePanel.h  FunctionBar.cpp  FunctionBar.h  InfoBar.cpp  InfoBar.h  PathBar.cpp  PathBar.h  StatusBar.cpp  StatusBar.h  Theme.h
mdir/src/widget/: Dialog.cpp  Dialog.h  InputDialog.cpp  InputDialog.h  Label.cpp  Label.h  ListView.cpp  ListView.h  Menu.cpp  Menu.h  Widget.h
src/: CMakeLists.txt
src/ventty/: ventty.h  ventty_gfx.h
src/ventty/art/: AsciiArt.cpp  AsciiArt.h  BrailleCanvas.cpp  BrailleCanvas.h
src/ventty/core/: Cell.hpp  Color.cpp  Color.h  Rect.cpp  Rect.h  Utf8.cpp  Utf8.h  Window.cpp  Window.h
src/ventty/gfx/: GfxFont.cpp  GfxFont.h  GfxInput.cpp  GfxInput.h  GfxRenderer.cpp  GfxRenderer.h  GfxTerminal.cpp  GfxTerminal.h
src/ventty/gfx/fonts/: EmbeddedFonts.h  cp437_8x16.cpp  hangul_16x16.cpp  jamo_16x16.cpp
src/ventty/input/: InputEngine.cpp  InputEngine.h  KeyChord.cpp  KeyChord.h  Keymap.cpp  Keymap.h  KeymapFile.cpp  KeymapFile.h
src/ventty/terminal/: Input.cpp  Input.h  Renderer.cpp  Renderer.h  Terminal.cpp  Terminal.h  TerminalBase.h
src/ventty/widget/: Dialog.cpp  Dialog.h  InputDialog.cpp  InputDialog.h  Label.cpp  Label.h  ListView.cpp  ListView.h  Menu.cpp  Menu.h  Widget.cpp  Widget.h
tests/: CMakeLists.txt  demo_hangul.cpp  demo_widget_dialog.cpp  demo_widget_label.cpp  gfx_demo_terminal.cpp  test_ascii_art.cpp  test_cell.cpp  test_color.cpp  test_input.cpp  test_utf8.cpp  test_window.cpp
tools/: embed_font.py  gen_font_atlas.py  gen_overworld.py  makeit.sh
tools/output/: cp437_8x16.cfnt  hangul_16x16.cfnt  jamo_16x16.cfnt  jamo_16x16.fnt
ventty/: CMakeLists.txt
ventty/src/: CMakeLists.txt
ventty/src/ventty/: AnsiRenderer.cpp  AnsiRenderer.h  AnsiTerminal.cpp  AnsiTerminal.h  AsciiArt.cpp  AsciiArt.h  Cell.h  Input.cpp  Input.h  Screen.cpp  Screen.h  Terminal.cpp  Terminal.h  TerminalControl.cpp  TerminalControl.h  Utf8.h  Window.cpp  Window.h  ventty.h
ventty/src/ventty/core/: Cell.hpp  Color.cpp  Color.h  Utf8.cpp  Window.cpp  Window.h
ventty/src/ventty/terminal/: Renderer.cpp  Renderer.h  Terminal.cpp  Terminal.h  TerminalBase.h
ventty/tests/: CMakeLists.txt  demo_ascii_art.cpp  demo_color.cpp  demo_hangul.cpp  demo_terminal.cpp  demo_window.cpp  gfx_demo_terminal.cpp  test_ascii_art.cpp  test_cell.cpp  test_color.cpp  test_screen.cpp  test_utf8.cpp  test_window.cpp
ventty_gfx/: CMakeLists.txt
ventty_gfx/docs/plans/: 001-screen-separation.md
ventty_gfx/src/: CMakeLists.txt
ventty_gfx/src/ventty_gfx/: Font.cpp  Font.h  GfxRenderer.cpp  GfxRenderer.h  GfxTerminal.cpp  GfxTerminal.h  Input.cpp  Input.h  Terminal.cpp  Terminal.h  ventty_gfx.h
ventty_gfx/tests/: CMakeLists.txt  demo_terminal.cpp
